tdf#159678: Fix heading dropdown list

Change-Id: I65b6e6e5484f26b27e7851a6615550f527fcfb06
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163416
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 694b9b6422ee27da13ad455174cde50b1a673ac7)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163406
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>